syntax = "proto3";

service ClusterManager {
    rpc CreateClientDatabase (CreateClientDatabaseRequest) returns (ClientResponse) {}
    rpc CreateClientDeployment (CreateClientDeploymentRequest) returns (ClientResponse) {}
    rpc UpdateClientIngress (UpdateClientIngressRequest) returns (ClientResponse) {}
    rpc UpdateClientDeployment (UpdateClientDeploymentRequest) returns (ClientResponse) {}
    rpc DeleteClient (DeleteClientRequest) returns (ClientResponse) {}
}

message Deployment {
    int32 replicas = 1;
    string name = 2;
    string label = 3;
    string db_host = 4;
    string db_username = 5;
    string db_password = 6;
    string db_database = 7;
    string site_url = 8;
    string image = 9;
}

message Service {
    string name = 1;
    string label = 2;
}

message DeploymentPvc {
    string name = 1;
    string storage = 2;
}

message Ingress {
    string name = 1;
    string sub_domain = 2;
    string resource = 3;
}

message Database {
    string name = 1;
    string label = 2;
    string db_username = 3;
    string db_password = 4;
    string db_database = 5;
}

message DatabaseService {
    string name = 1;
    string label = 2;
}

message DatabasePvc {
    string name = 1;
    string storage = 2;
}

message DatabaseNodePort{
    string name = 1;
    string label = 2;
    int32 port = 3;
}

message CreateClientDatabaseRequest {
    Database database = 1;
    DatabaseService database_service = 2;
    DatabasePvc database_pvc = 3;
    DatabaseNodePort database_node_port = 4;
    string configData = 5;
}

message CreateClientDeploymentRequest {
    Deployment deployment = 1;
    Service service = 2;
    DeploymentPvc deployment_pvc = 3;
    Ingress ingress = 4;
    string database_node_port_name = 5;
    string configData = 6;
}

message UpdateClientIngressRequest {
    Ingress ingress = 1;
    string configData = 2;
}

message UpdateClientDeploymentRequest {
    Deployment deployment = 1;
    string configData = 2;
}

message DeleteClientRequest {
    string deployment_name = 1;
    string service_name = 2;
    string deployment_pvc_name = 3;
    string ingress_name = 4;
    string database_name = 5;
    string database_service_name = 6;
    string database_pvc_name = 7;
    string configData = 8;
}

message ClientResponse {
    int32 success = 1;
    string error = 2;
}
